--- a/src/styles/vars.scss
+++ b/src/styles/vars.scss
@@ -2,7 +2,7 @@
 // $bg-color: black;
 // $text-color: white;
 
-$ochre: #725936;
+$ochre: #ae8652;
 
 // TYPOGRAPHY
 // $main-font: "Arial", sans-serif;
